<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>com.UnsdocBackend</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
        <!-- Web otomasyonu için kullanılan Selenium WebDriver'ı ve ilgili araçları sağlar. -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>4.11.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
        <!-- WebDriver sürücülerini kolayca yönetmek için kullanılan bir araçtır. -->
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>5.5.2</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
        <!-- Microsoft Office belgelerini (Excel) işlemek için kullanılır. -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.2.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
        <!-- Rastgele sahte veri oluşturmak için kullanılır, özellikle test verileri oluştururken faydalıdır. -->
        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>1.0.2</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
        <!-- BDD (Behavior Driven Development/Gherkin lang) testlerini yazmak için kullanılır. -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>7.4.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
        <!-- Cucumber testlerini JUnit ile entegre etmek için kullanılır. -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>7.4.1</version>
            <scope>test</scope>
        </dependency>


        <!-- Java classları daha az kodla oluşturmayı sağlar -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>RELEASE</version>
            <scope>compile</scope>
        </dependency>

        <!-- Microsoft Office belgelerini (Excel) işlemek için kullanılır.-->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>5.2.0</version>
        </dependency>


        <!-- MySQL veritabanına bağlantı kurmak için kullanılır.-->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.31</version>
        </dependency>

        <!-- GET, POST, PUT, DELETE vb. gibi farklı HTTP istek türlerini oluşturmamıza ve göndermemize izin verir.-->
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>4.5.1</version>
        </dependency>

        <!-- Test raporlarını oluşturmak ve yönetmek için kullanılır.-->
        <dependency>
            <groupId>com.aventstack</groupId>
            <artifactId>extentreports</artifactId>
            <version>5.0.9</version>
        </dependency>

        <!-- JSON verilerini Java nesnelerine ve Java nesnelerini JSON'e dönüştürmek için kullanılır.-->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.13.4.1</version>
        </dependency>


        <!-- JSON verilerini maskelemek ve gizlemek için kullanılır.-->
        <dependency>
            <groupId>io.github.javiercanillas</groupId>
            <artifactId>jackson-masker</artifactId>
            <version>0.9.9</version>
            <scope>compile</scope>
        </dependency>

        <!-- Java tabanlı bir test çerçevesidir ve birim testleri yazmak için kullanılır.-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>


        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
        <!-- JSON verilerini işlemek için kullanılır. -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.9.0</version>
        </dependency>


        <!-- https://mvnrepository.com/artifact/org.json/json -->
        <!-- JSON verileri oluşturmak, işlemek ve çözmek için kullanılır. -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20230227</version>
        </dependency>

        <!-- Java tabanlı testleri kolayca yapılandırmak ve yürütmek için kullanılır. -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.7.0</version>
        </dependency>


        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-cucumber7-jvm</artifactId>
            <version>2.19.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jdk8 -->
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jdk8</artifactId>
            <version>2.15.2</version>
        </dependency>


    </dependencies>

    <build>
        <plugins>

            <!-- Bu plugin, bağlantı testleri gibi "failsafe" olarak adlandırılan özel testleri çalıştırmak için kullanılır. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M1</version>
                <configuration>
                    <!--  Eğer bu değer true ise, test başarısız olsa bile projenin derlemesi ve diğer işlemler devam eder. -->
                    <testFailureIgnore>true</testFailureIgnore>
                    <!-- Testlerin tamamen atlanıp atlanmayacağını belirler. Bu değer false ise, testler çalıştırılır. -->
                    <skipTests>false</skipTests>
                    <includes>
                        <!-- Hangi test classlarının çalıştırılacağını tanımlar.  -->
                        <include>**/runners/*TestRunner*.java</include>
                    </includes>
                </configuration>
            </plugin>

            <!-- JUnit veya TestNG gibi test çerçeveleriyle yazılan birim testleri yürütmek için kullanılır. -->
            <!-- Testlerin eş zamanlı olarak çalıştırılma şeklini belirler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M1</version>
                <configuration>
                    <parallel>classes</parallel>
                    <forkMode>perthread</forkMode>
                    <threadCount>2</threadCount>
                    <reuseForks>false</reuseForks>
                    <argLine>-Duser.language=en</argLine>
                    <argLine>-Xmx1024m</argLine>
                    <argLine>-XX:MaxPermSize=256m</argLine>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                    <useFile>false</useFile>
                    <includes>
                        <include>**/runners/*TestRunner*.java</include>
                    </includes>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>

            <!-- Cucumber testlerinin raporlarını oluşturmak ve görselleştirmek için kullanılır. -->
            <plugin>
                <groupId>net.masterthought</groupId>
                <artifactId>maven-cucumber-reporting</artifactId>
                <version>5.0.0</version>
                <executions>
                    <execution>
                        <id>execution</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <projectName>cucumber-framework</projectName>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                            <!--                            <cucumberOutput>${project.build.directory}</cucumberOutput>-->
                            <inputDirectory>${project.build.directory}</inputDirectory>
                            <jsonFiles>
                                <param>**/json-reports/*.json</param>
                            </jsonFiles><classificationFiles>->
                            <param>sample.properties</param>
                            <param>other.properties</param>
                        </classificationFiles>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>